--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Identity
-spring.application.name=Ring 1.0
+spring.application.name=Ring 0.0.1
 
 # Hibernate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Actuator
 management.security.roles=LORD
