--- a/pom.xml
+++ b/pom.xml
@@ -302,6 +302,13 @@
             <artifactId>google-api-services-sheets</artifactId>
             <version>v4-rev48-1.21.0</version>
         </dependency>
+        
+        <!-- API for microsft documents -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.0</version>
+        </dependency>
 
         
     </dependencies>
