--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>br.com.dafiti</groupId>
     <artifactId>ring</artifactId>
     <version>0.0.1</version>
-    <!--<packaging>war</packaging>-->
+    <packaging>war</packaging>
     <name>ring</name>
     <description>Ring project for Spring Boot</description>
 
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
-            <!--<scope>provided</scope> -->
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -227,7 +227,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>24.1.1</version>
+            <version>28.2-jre</version>
         </dependency>
         
         <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
